Add searchMediaItems() tests and share one container for all integration tests